# rusteron_gsr

./: .cargo_vcs_info.json  .gitignore  .gitmodules  .justfile  BENCHMARKS.md  BENCHMARKS_m1.md  BUILD.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HOW_TO_BUILD.md  LICENSE  README.md  rust-toolchain.toml  rustc-asan-wrapper.sh  valgrind.supp
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
rusteron-archive/: Cargo.toml  README.md  bindings.h  build.rs
rusteron-archive/artifacts/default/linux/aarch64/: aeron.rs
rusteron-archive/artifacts/default/linux/x86_64/: aeron.rs  bindings.rs
rusteron-archive/artifacts/default/macos/aarch64/: aeron.rs  libaeron.dylib  libaeron_archive_c_client.dylib
rusteron-archive/artifacts/default/macos/x86_64/: aeron.rs  bindings.rs  libaeron.dylib  libaeron_archive_c_client.dylib
rusteron-archive/artifacts/static/linux/aarch64/: aeron.rs  bindings.rs
rusteron-archive/artifacts/static/linux/x86_64/: aeron.rs
rusteron-archive/artifacts/static/macos/aarch64/: aeron.rs  aeron_custom.rs  bindings.rs
rusteron-archive/artifacts/static/macos/x86_64/: aeron.rs  aeron_custom.rs
rusteron-archive/docs-rs/: aeron.rs  aeron_custom.rs  bindings.rs
rusteron-archive/src/: lib.rs  slow_consumer_test.rs  testing.rs
rusteron-client/: Cargo.toml  README.md  bindings.h  build.rs
rusteron-client/artifacts/default/linux/aarch64/: aeron.rs  bindings.rs
rusteron-client/artifacts/default/linux/x86_64/: aeron.rs  bindings.rs
rusteron-client/artifacts/default/macos/aarch64/: aeron.rs  libaeron.dylib
rusteron-client/artifacts/default/macos/x86_64/: aeron.rs  libaeron.dylib
rusteron-client/artifacts/static/linux/aarch64/: aeron.rs
rusteron-client/artifacts/static/linux/x86_64/: aeron.rs
rusteron-client/artifacts/static/macos/aarch64/: aeron.rs  aeron_custom.rs
rusteron-client/artifacts/static/macos/x86_64/: aeron.rs  aeron_custom.rs  bindings.rs
rusteron-client/benches/: ping_pong.rs  ping_pong_ipc.rs
rusteron-client/docs-rs/: aeron.rs  aeron_custom.rs  bindings.rs
rusteron-client/examples/: basic_pub_sub.rs  embedded_exclusive_ipc_throughput.rs  embedded_ping_pong.rs  pf-macos-mdc-loss.conf
rusteron-client/src/: aeron.rs  lib.rs
rusteron-code-gen/: Cargo.toml  README.md
rusteron-code-gen/bindings/: archive.rs  client.rs  media-driver.rs  rb.rs
rusteron-code-gen/src/: aeron_custom.rs  common.rs  generator.rs  lib.rs  parser.rs  rb_custom.rs  test_logger.rs
rusteron-common/: Cargo.toml
rusteron-common/src/: lib.rs
rusteron-docker-samples/: .justfile  README.md  pod.yml
rusteron-docker-samples/aeron-media-driver/: Dockerfile
rusteron-docker-samples/rusteron-dummy-example/: Cargo.toml  Dockerfile
rusteron-docker-samples/rusteron-dummy-example/src/: lib.rs  model.rs
rusteron-media-driver/: Cargo.toml  README.md  bindings.h  build.rs
rusteron-media-driver/artifacts/default/linux/aarch64/: aeron.rs  bindings.rs
rusteron-media-driver/artifacts/default/linux/x86_64/: aeron.rs  bindings.rs
rusteron-media-driver/artifacts/default/macos/aarch64/: aeron.rs  libaeron_driver.dylib
rusteron-media-driver/artifacts/default/macos/x86_64/: aeron.rs  libaeron_driver.dylib
rusteron-media-driver/artifacts/static/linux/aarch64/: aeron.rs
rusteron-media-driver/artifacts/static/linux/x86_64/: aeron.rs
rusteron-media-driver/artifacts/static/macos/aarch64/: aeron.rs
rusteron-media-driver/artifacts/static/macos/x86_64/: aeron.rs  aeron_custom.rs  bindings.rs
rusteron-media-driver/docs-rs/: aeron.rs  aeron_custom.rs  bindings.rs
rusteron-media-driver/src/: lib.rs  media_driver.rs
rusteron-rb/: Cargo.toml  README.md  bindings.h  build.rs
rusteron-rb/artifacts/default/linux/aarch64/: aeron.rs
rusteron-rb/artifacts/default/linux/x86_64/: aeron.rs
rusteron-rb/artifacts/default/macos/aarch64/: aeron.rs  libaeron.dylib
rusteron-rb/artifacts/default/macos/x86_64/: aeron.rs  bindings.rs  libaeron.dylib
rusteron-rb/artifacts/static/linux/aarch64/: aeron.rs
rusteron-rb/artifacts/static/linux/x86_64/: aeron.rs
rusteron-rb/artifacts/static/macos/aarch64/: aeron.rs
rusteron-rb/artifacts/static/macos/x86_64/: aeron.rs  aeron_custom.rs  rb_custom.rs
rusteron-rb/examples/: spsc_throughput.rs
rusteron-rb/src/: lib.rs
scripts/: valgrind-run.sh
