[workspace]
members = [
    "rusteron-code-gen",
    "rusteron-media-driver",
    "rusteron-client",
    "rusteron-archive",
]
exclude = ["rusteron-docker-samples/rusteron-dummy-example"]
resolver = "2"

[workspace.package]
compression = "best"

[workspace.dependencies]
rusteron-code-gen = { path = "rusteron-code-gen", version = "=0.1.132" }
ctrlc = "3.4"
bindgen = "0.71"
cmake = "0.1"
dunce = "1.0"
pkg-config = "0.3"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
itertools = "0.14"
num-format = "0.4"
hdrhistogram = "7.5"
criterion = "0.6"
serial_test = "3.2"
regex = "1.11"
log = "0.4"
walkdir = "2.5"
reqwest = { version = "0.12", features = ["blocking", "default-tls"] }
flate2 = { version = "1.1"}
tar    = "0.4"


[release]
bump = "auto"
update_dependencies = true
publish = true
workspace = true
auto_publish = true
push = true
tag = true
dependency_version = "update"
consolidate_commits = true
allow_dirty = true
no_confirm = true
update_crates_index = true
verify = false
compression = "best"

[profile.release]
debug = false
panic = "unwind"

#[profile.bench]
#debug = true
#opt-level = 0