[package]
name = "rusteron-archive"
version = "0.1.137"
edition = "2021"
authors = ["Mo Imran <mimran1980@gmail.com>", "Mo Imran <mohammed.imran@gsr.io"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gsrxyz/rusteron"
homepage = "https://github.com/gsrxyz/rusteron"
keywords = ["aeron", "low-latency", "aeron-archive", "aeron-c-bindings", "networking"]
categories = ["network-programming"]
documentation = "https://gsrxyz.github.io/rusteron/rusteron_archive/index.html"
description = "Extends the Aeron client to include archiving features, such as recording streams and handling replay capabilities. It uses the Aeron C bindings from aeron-archive module."
readme = "README.md"

exclude = [
    "aeron/.gradle/**",
    "aeron/buildSrc/.gradle/**",
    "aeron/build/**",
    "aeron/aeron-agent/build/**",
    "aeron/aeron-all/build/**",
    "aeron/aeron-annotations/build/**",
    "aeron/aeron-archive/build/**",
    "aeron/aeron-client/build/**",
    "aeron/aeron-cluster/build/**",
    "aeron/aeron-driver/build/**",
    "aeron/aeron-samples/build/**",
    "aeron/aeron-system-tests/build/**",
    "aeron/aeron-test-support/build/**",
    "aeron/buildSrc/build/**",
]

[dependencies]
regex = { workspace = true}
log = { workspace = true}

[build-dependencies]
bindgen = {  workspace = true }
cmake = {  workspace = true }
dunce = {  workspace = true }
pkg-config = {  workspace = true }
proc-macro2 = {  workspace = true }
regex = { workspace = true}
log = { workspace = true}
rusteron-code-gen = { workspace = true }
walkdir = { workspace = true}
reqwest = {workspace = true}
flate2 = {workspace = true}
tar    = {workspace = true}



[dev-dependencies]
serial_test = { workspace = true }
env_logger = "0.11"

[features]
# using static as different modules have different versions of aeron which don't seem to play nicely
default = []
static = []
# logs the backtrace on each AeronCError
backtrace = []
extra-logging = []
precompile = []

[package.metadata.docs.rs]
features = ["static", "precompile"]
default-target = "aarch64-apple-darwin"
