[package]
name = "rusteron-client"
version = "0.1.154"
edition = "2021"
authors = ["GSR devs <dev@gsr.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gsrxyz/rusteron"
homepage = "https://github.com/gsrxyz/rusteron"
readme = "README.md"
documentation = "https://gsrxyz.github.io/rusteron/rusteron_client/index.html"
description = "Provides core client functionalities for interacting with the Aeron protocol, such as establishing connections, subscribing, and publishing. It uses the Aeron C bindings from aeron-client module."
keywords = ["aeron", "low-latency", "aeron-client", "aeron-c-bindings", "networking"]
categories = ["network-programming"]

exclude = [
    "aeron/.gradle/**",
    "aeron/buildSrc/.gradle/**",
    "aeron/build/**",
    "aeron/aeron-agent/build/**",
    "aeron/aeron-all/build/**",
    "aeron/aeron-annotations/build/**",
    "aeron/aeron-archive/build/**",
    "aeron/aeron-client/build/**",
    "aeron/aeron-cluster/build/**",
    "aeron/aeron-driver/build/**",
    "aeron/aeron-samples/build/**",
    "aeron/aeron-system-tests/build/**",
    "aeron/aeron-test-support/build/**",
    "aeron/buildSrc/build/**"
]

[dependencies]
ctrlc         = { workspace = true }
hdrhistogram  = { workspace = true }
log           = { workspace = true }
num-format    = { workspace = true }
regex         = { workspace = true }

[build-dependencies]
bindgen          = { workspace = true }
cmake            = { workspace = true }
dunce            = { workspace = true }
flate2           = { workspace = true }
log              = { workspace = true }
pkg-config       = { workspace = true }
proc-macro2      = { workspace = true }
regex            = { workspace = true }
reqwest          = { workspace = true }
rusteron-code-gen = { workspace = true }
tar              = { workspace = true }
walkdir          = { workspace = true }

[dev-dependencies]
criterion             = { workspace = true }
env_logger            = "0.11"
rusteron-media-driver = { path = "../rusteron-media-driver" }
serial_test           = { workspace = true }

[features]
# using static as different modules have different versions of aeron which don't seem to play nicely
default        = []
static         = ["rusteron-media-driver/static"]  # Statically links the Aeron C code
backtrace      = []   # Logs the backtrace on each AeronCError
extra-logging  = []   # Logs when resources are created and destroyed
log-c-bindings = []   # Logs every C binding call with arguments and return values
precompile     = []   # Uses precompiled C code instead of requiring cmake and java

[[bench]]
name    = "ping_pong"
harness = false

[[bench]]
name    = "ping_pong_ipc"
harness = false

[package.metadata.docs.rs]
features        = ["static", "precompile"]
default-target  = "aarch64-apple-darwin"
