[package]
name = "rusteron-code-gen"
version = "0.1.150"
edition = "2021"
authors = ["GSR devs <dev@gsr.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gsrxyz/rusteron"
homepage = "https://github.com/gsrxyz/rusteron"
readme = "README.md"
documentation = "https://gsrxyz.github.io/rusteron/rusteron_code_gen"
description = "Code generator for Aeron C bindings"

[dependencies]
itertools     = "0.14"
log           = "0.4"
proc-macro2   = "1.0"
quote         = "1.0"
regex         = "1.11"
syn           = { version = "2.0", features = ["full"] }
fd-lock       = { workspace = true}

[dev-dependencies]
trybuild = "1.0"

[features]
default        = []
static         = []
backtrace      = []     # logs the backtrace on each AeronCError
extra-logging  = []
