[package]
name = "rusteron-code-gen"
version = "0.1.161"
edition = "2021"
authors = ["GSR devs <dev@gsr.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gsrxyz/rusteron"
homepage = "https://github.com/gsrxyz/rusteron"
readme = "README.md"
documentation = "https://gsrxyz.github.io/rusteron/rusteron_code_gen"
description = "Code generator for Aeron C bindings"

[dependencies]
itertools     = { workspace = true }
log           = { workspace = true }
proc-macro2   = { workspace = true }
quote         = { workspace = true }
regex         = { workspace = true }
syn           = { workspace = true }

[dev-dependencies]
fd-lock       = { workspace = true }
trybuild      = "1.0"

[features]
default        = []
static         = []
backtrace      = []     # logs the backtrace on each AeronCError
extra-logging  = []
