[package]
name = "rusteron-common"
version = "0.1.0"
edition = "2021"
authors = ["Mo Imran <mimran1980@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mimran1980/rusteron"
homepage = "https://github.com/mimran1980/rusteron"
keywords = ["aeron", "low-latency", "client", "bindings", "networking"]
categories = ["network-programming"]
documentation = "https://github.com/mimran1980/rusteron"

[dependencies]
# Add any specific dependencies for the common module here.