[package]
name = "rusteron-media-driver"
version = "0.1.160"
edition = "2021"
authors = ["GSR devs <dev@gsr.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gsrxyz/rusteron"
homepage = "https://github.com/gsrxyz/rusteron"
readme = "README.md"
documentation = "https://gsrxyz.github.io/rusteron/rusteron_media_driver/index.html"
description = "Implements the Aeron Media Driver, a core component for managing messaging between producers and consumers. It uses the Aeron C bindings from aeron-driver module."
keywords = ["aeron", "low-latency", "media-driver", "aeron-c-bindings", "networking"]
categories = ["network-programming"]

exclude = [
    "aeron/.gradle/**",
    "aeron/buildSrc/.gradle/**",
    "aeron/build/**",
    "aeron/aeron-agent/build/**",
    "aeron/aeron-all/build/**",
    "aeron/aeron-annotations/build/**",
    "aeron/aeron-archive/build/**",
    "aeron/aeron-client/build/**",
    "aeron/aeron-cluster/build/**",
    "aeron/aeron-driver/build/**",
    "aeron/aeron-samples/build/**",
    "aeron/aeron-system-tests/build/**",
    "aeron/aeron-test-support/build/**",
    "aeron/buildSrc/build/**"
]

[dependencies]
ctrlc = { workspace = true }
log   = { workspace = true }
regex = { workspace = true, optional = true }

[dev-dependencies]
fd-lock     = { workspace = true }
rusteron-code-gen = { workspace = true }
serial_test = { workspace = true }

[build-dependencies]
bindgen           = { workspace = true, optional = true }
cmake             = { workspace = true, optional = true }
dunce             = { workspace = true, optional = true }
flate2            = { workspace = true, optional = true }
log               = { workspace = true }
pkg-config        = { workspace = true }
proc-macro2       = { workspace = true, optional = true }
reqwest           = { workspace = true, optional = true }
rusteron-code-gen = { workspace = true }
tar               = { workspace = true, optional = true }
walkdir           = { workspace = true }

[features]
# using static as different modules have different versions of aeron which don't seem to play nicely
default        = ["build-from-source"]
static         = ["build-from-source"]              # Statically links the Aeron C code
backtrace      = ["dep:regex"]   # Logs the backtrace on each AeronCError
extra-logging  = []              # Logs when resources are created and destroyed
log-c-bindings = []              # Logs every C binding call with arguments and return values
precompile        = ["dep:reqwest", "dep:flate2", "dep:tar", "native-tls"]  # Uses precompiled C code instead of requiring cmake and java (defaults to native-tls)
precompile-rustls = ["dep:reqwest", "dep:flate2", "dep:tar", "rustls-tls"]  # Uses precompiled C code and rustls for downloads
native-tls        = ["reqwest?/native-tls"]   # Use native-tls for reqwest
rustls-tls        = ["reqwest?/rustls"]         # Use rustls instead of native-tls for reqwest
build-from-source = ["dep:bindgen", "dep:cmake", "dep:dunce", "dep:proc-macro2"]  # Builds Aeron C from source (requires cmake and a C++ compiler)

[[bin]]
name = "media_driver"
path = "src/bin/media_driver.rs"

[package.metadata.docs.rs]
features = ["static", "precompile"]
default-target = "aarch64-apple-darwin"
