[package]
name = "rusteron-rb"
version = "0.1.47"
edition = "2021"
authors = ["Mo Imran <mimran1980@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mimran1980/rusteron"
homepage = "https://github.com/mimran1980/rusteron"
keywords = ["ring-buffer", "aeron-rb", "aeron-c-bindings"]
categories = ["network-programming"]
documentation = "https://mimran1980.github.io/rusteron/rusteron_rb/index.html"
description = "Provides ring buffer and broadcast functionalities via aeron c bindings, allowing efficient, low-latency message passing between different threads or processes. This module implements Single Producer, Single Consumer (SPSC) ring buffers, Multi-Producer, Single Consumer (MPSC) ring buffers, and broadcast channels."
readme = "README.md"

exclude = [
    "aeron/.gradle/**",
    "aeron/buildSrc/.gradle/**",
    "aeron/build/**",
    "aeron/aeron-agent/build/**",
    "aeron/aeron-all/build/**",
    "aeron/aeron-annotations/build/**",
    "aeron/aeron-archive/build/**",
    "aeron/aeron-client/build/**",
    "aeron/aeron-cluster/build/**",
    "aeron/aeron-driver/build/**",
    "aeron/aeron-samples/build/**",
    "aeron/aeron-system-tests/build/**",
    "aeron/aeron-test-support/build/**",
    "aeron/buildSrc/build/**",
]

[dependencies]
ctrlc = { workspace = true }
num-format = {  workspace = true }
log = { workspace = true}
regex = { workspace = true}


[build-dependencies]
bindgen = {  workspace = true }
cmake = {  workspace = true }
dunce = {  workspace = true }
pkg-config = {  workspace = true }
syn = {  workspace = true }
proc-macro2 = {  workspace = true }
quote = {  workspace = true }
itertools = {  workspace = true }
rusteron-code-gen = {path = "../rusteron-code-gen", version = "0"}
log = { workspace = true}
regex = { workspace = true}

[features]
# using static as different modules have different versions of aeron which don't seem to play nicely
default = ["static"]
static = []
