[package]
name = "rusteron-dummy-example"
version = "0.1.0"
edition = "2021"

[dependencies]
websocket-lite = "0.5"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
rusteron-archive = { version = "0.1", features = ["static", "precompile"]}
rusteron-media-driver = { version = "0.1", features = ["static"]}
#rusteron-archive = { path = "../../rusteron-archive"}
#rusteron-media-driver = { path = "../../rusteron-media-driver"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"

[features]
static = []